       Use of the .fai file extension is still fine for FormulaAI code;
       for other formula code in a separate file, .wfl is recommended instead.
 * Miscellaneous and bug fixes:
   * Resolve translated logo images not being used (bug #24357)
   * Ported the "hexometer" tool from Bash to Python 3
   * Recognize hotkey release events
   * Allow changing keybindings for scrolling the map.

Version 1.13.4:
 * Language and i18n:
   * Updated translations: British English, Russian
 * Graphics:
   * Improved or new terrain graphics: Mine Walls (replaces Hewn Cave Walls).
 * User interface:
   * Fix vertical alignment of individual attacks listed in the Attack Unit
     dialog.
   * Removed extra padding below unit stats in the Attack Unit dialog.
 * Miscellaneous and bug fixes:
   * Fix non-deterministic crashes in the Attack Unit dialog resulting from
     invalid memory references (regression introduced in 1.13.3).
   * Fix uninitialized variable in event handling code (bug #24498).

Version 1.13.3:
 * Greatly improved SDL 2 support. SDL 2 is now used by default build when
   building. This fixes the following bugs, among others:
   * Bug #18112: Color cursors cause slow mouse movement at menus
   * Bug #19666: When I resize windows during dialog I lose the menu buttons
   * Bug #20332: Cursor not mapping correctly on Retina display when in Windowed mode
   * Bug #23820: SDL 2 alpha blending issues
   * Bug #23821: Text input is broken in GUI1 under SDL 2
   * Bug #23908: SDL 2 SDL_BlitSurface causes crashes
   * Bug #23918: UI graphics garbled on OS X 10.11 El Capitan
   * Bug #23934: Resize actions are laggy
   * Bug #24138: SDL 2 crash on resize after starting a game and returning to the title screen
   * Bug #24209: Screen becomes black upon minimise and restore
   * bug #24212: SDL 2 build handled input incorrectly once window focus is lost when menus are open
   * Bug #24213: SDL 2 build leaves menu items stuck if window dimensions change while open