@@ -289,6 +289,7 @@ Version 1.13.4+dev:
    * Ported the "hexometer" tool from Bash to Python 3
    * Recognize hotkey release events
    * Allow changing keybindings for scrolling the map.
+   * Fix the move-to-targets candidate action of the default AI ignoring tunnels
 
 Version 1.13.4:
  * Language and i18n:
